--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-sitemap": "^4.2.3",
     "react": "19.2.0",
